# aizo

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/tests/: CMakeLists.txt
libs/: CMakeLists.txt
libs/parser/: CMakeLists.txt
libs/parser/tests/: CMakeLists.txt  test_parser.h
libs/stl_alter/: CMakeLists.txt
libs/stl_alter/algorithms/: CMakeLists.txt  sort.cpp
libs/stl_alter/algorithms/test/: CMakeLists.txt
libs/stl_alter/containers/: Array.h  CMakeLists.txt  SingleList.h  node.cpp  node.h
libs/stl_alter/containers/tests/: CMakeLists.txt  tests_containers.cpp  tst_node.cpp
libs/stl_alter/tests/: CMakeLists.txt
libs/tests/: CMakeLists.txt
